--- a/.github/workflows/omnios-fiat-test.yml
+++ b/.github/workflows/omnios-fiat-test.yml
@@ -26,11 +26,11 @@ jobs:
           psrinfo -vp
           cat /etc/release
           pkg install developer/build/gnu-make
-          pkg install developer/gcc51
+          pkg install developer/gcc12
           pkg install shell/bash
           gmake -v
           pkg install developer/object-file developer/linker developer/build/gnu-make system/header system/library/math
-          ls -l /opt/bin/*
+          find /opt/
 
         run: |
           HIGHCTIDH_PORTABLE=1 gmake
