--- a/.github/workflows/macos-fiat-test.yml
+++ b/.github/workflows/macos-fiat-test.yml
@@ -9,13 +9,13 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Gather kernel environment
-    - run: uname -a
+      run: uname -a
 
     - name: Gather compiler info
-    - run: clang -v
+      run: clang -v
 
     - name: compile
-    - run: HIGHCTIDH_PORTABLE=1 CC=clang MAKE=gmake gmake
+      run: HIGHCTIDH_PORTABLE=1 CC=clang MAKE=gmake gmake
 
     - name: test-quick
-    - run: HIGHCTIDH_PORTABLE=1 CC=clang MAKE=gmake gmake test-quick
+      run: HIGHCTIDH_PORTABLE=1 CC=clang MAKE=gmake gmake test-quick
