--- a/.github/workflows/macos-fiat-test.yml
+++ b/.github/workflows/macos-fiat-test.yml
@@ -8,6 +8,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Set up Homebrew
+      id: set-up-homebrew
+      uses: Homebrew/actions/setup-homebrew@master
+
     - name: Gather kernel environment
       run: uname -a
 
