--- a/.github/workflows/macos-fiat-test.yml
+++ b/.github/workflows/macos-fiat-test.yml
@@ -9,7 +9,8 @@ jobs:
   build:
     strategy:
       matrix:
-        OS: ["macos-11", "macos-12", "macos-13", "macos-latest"]
+        OS: ["macos-11", "macos-12", "macos-13", "macos-14"]
+        CC: ["clang", "gcc"]
     runs-on: ${{ matrix.OS }}
     steps:
     - uses: actions/checkout@v4
@@ -26,11 +27,11 @@ jobs:
 
     - name: Gather toolchain info
       run: |
-        clang -v
+        ${{ matrix.CC }} -v
         make -v
 
     - name: compile
-      run: HIGHCTIDH_PORTABLE=1 CC=clang MAKE=gmake gmake
+      run: HIGHCTIDH_PORTABLE=1 CC=${{ matrix.CC }} MAKE=gmake gmake
 
 #    - name: test-quick
 #run: HIGHCTIDH_PORTABLE=1 CC=clang MAKE=gmake gmake test-quick
