--- a/.github/workflows/alpine-docker.yml
+++ b/.github/workflows/alpine-docker.yml
@@ -1,4 +1,4 @@
-name: Alpine
+name: Alpine Docker
 
 on:
   push:
@@ -12,7 +12,8 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         PORTABLE: ["0", "1"]
-        CONTAINER: ["alpine:3.19", "alpine:3.18"]
+        CONTAINER: ["alpine:3.19.1", "alpine:3.19", "alpine:3.18.6",
+                    "alpine:3.18", "alpine:3.17.7", "alpine:3.17"]
     container: ${{ matrix.CONTAINER }}
     steps:
     - uses: actions/checkout@v4
@@ -22,3 +23,16 @@ jobs:
 
     - name: Build
       run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
+    - name: Test install
+      run: CC=${{ matrix.CC }} make install
+
+    - name: Build examples
+      run: CC=${{ matrix.CC }} make examples
+
+    - name: Run examples
+      run: CC=${{ matrix.CC }} make examples
+
+    - name: Examine build artifacts:
+      run: |
+          ls -alh dist/*.so
+          sha256sum dist/*.so
