--- a/.github/workflows/alpine-docker.yml
+++ b/.github/workflows/alpine-docker.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Build
       run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
     - name: Test install
-      run: CC=${{ matrix.CC }} make install
+      run: CC=${{ matrix.CC }} make install && ldconfig -v
 
     - name: Build examples
       run: CC=${{ matrix.CC }} make examples
