--- a/.github/workflows/alpine-docker.yml
+++ b/.github/workflows/alpine-docker.yml
@@ -14,6 +14,7 @@ jobs:
         PORTABLE: ["0", "1"]
         CONTAINER: ["alpine:3.19.1", "alpine:3.19", "alpine:3.18.6",
                     "alpine:3.18", "alpine:3.17.7", "alpine:3.17"]
+        fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
     - uses: actions/checkout@v4
@@ -30,7 +31,7 @@ jobs:
       run: CC=${{ matrix.CC }} make examples
 
     - name: Run examples
-      run: CC=${{ matrix.CC }} make examples
+      run: CC=${{ matrix.CC }} make examples-run
 
     - name: Examine build artifacts
       run: ls -alh dist/*.so && sha256sum dist/*.so
