--- a/.github/workflows/debian-docker.yml
+++ b/.github/workflows/debian-docker.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         PORTABLE: ["0", "1"]
-        CONTAINER: ["debian:12-slim", "debian:11-slim", "debian:10-slim"]
+        CONTAINER: ["debian:12-slim", "debian:testing-slim", "debian:unstable-slim"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
