--- a/.github/workflows/docker-arch.yml
+++ b/.github/workflows/docker-arch.yml
@@ -29,6 +29,9 @@ jobs:
     - name: Build examples
       run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make examples
 
+    - name: Register libraries
+      run: sudo ldconfig /usr/local/lib
+
     - name: Run examples
       run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make examples-run
 
