--- a/.woodpecker/alpine.yml
+++ b/.woodpecker/alpine.yml
@@ -17,7 +17,7 @@ steps:
      - PATH=$PATH:~/.local/bin
      - export WORKDIR=`pwd`
      - export CC=${CC}
-     - ./misc/install-arch-deps.sh
+     - ./misc/install-alpine-deps.sh
      - mkdir dist
      - CC=$CC make
      - CC=$CC make install
