Add CI tests for 7 additional distros
This branch tests building with `clang` and `gcc` with the portable
and the assembly backend for Almalinux, Amazon Linux, Clear Linux,
Devuan, openSuse Tumbleweed, Oracle Linux, and Rocky Linux in a Docker
container.

Almalinux:
- almalinux:latest

Amazon Linux:
- amazonlinux:latest

Clear Linux:
- clearlinux:latest

Devuan:
- devuan/devuan:latest

openSUSE Tumbleweed:
- opensuse/tumbleweed

Oracle Linux:
- oraclelinux:9

Rocky Linux:
- rockylinux:9
- rockylinux:9.3

Additional Docker containers for other operating systems are desired.

--- a/.github/workflows/docker-clearlinux.yml
+++ b/.github/workflows/docker-clearlinux.yml
@@ -1,4 +1,4 @@
-name: Debian
+name: Clear Linux
 
 on:
   push:
@@ -12,14 +12,17 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         PORTABLE: ["0", "1"]
-        CONTAINER: ["debian:12-slim", "debian:testing-slim", "debian:unstable-slim"]
+        CONTAINER: ["clearlinux:latest"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install Debian deps
-      run: ./misc/install-debian-deps.sh
+    - name: Gather Clear Linux version info
+      run: swupd info
+
+    - name: Install Clear Linux deps
+      run: ./misc/install-clearlinux-deps.sh
 
     - name: Build
       run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
