--- a/.github/workflows/docker-amazonlinux.yml
+++ b/.github/workflows/docker-amazonlinux.yml
@@ -1,4 +1,4 @@
-name: Debian
+name: Amazon Linux
 
 on:
   push:
@@ -12,14 +12,21 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         PORTABLE: ["0", "1"]
-        CONTAINER: ["debian:12-slim", "debian:testing-slim", "debian:unstable-slim"]
+        CONTAINER: ["amazonlinux:latest"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
-    - uses: actions/checkout@v4
 
-    - name: Install Debian deps
-      run: ./misc/install-debian-deps.sh
+    - name: Install Amazon Linux pre-deps
+      run: yum install -y sudo tar gzip git > /dev/null 2>&1;
+
+    - uses: actions/checkout@v3
+
+    - name: Install Amazon Linux deps
+      run: ./misc/install-amazonlinux-deps.sh
+
+    - name: Gather compiler info
+      run: gcc -v && clang -v
 
     - name: Build
       run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
