--- a/.github/workflows/docker-oraclelinux.yml
+++ b/.github/workflows/docker-oraclelinux.yml
@@ -1,4 +1,4 @@
-name: Debian
+name: Oracle Linux
 
 on:
   push:
@@ -12,14 +12,14 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         PORTABLE: ["0", "1"]
-        CONTAINER: ["debian:12-slim", "debian:testing-slim", "debian:unstable-slim"]
+        CONTAINER: ["oraclelinux:9"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install Debian deps
-      run: ./misc/install-debian-deps.sh
+    - name: Install Oracle Linux deps
+      run: ./misc/install-oraclelinux-deps.sh
 
     - name: Build
       run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
