--- a/.github/workflows/docker-alma.yml
+++ b/.github/workflows/docker-alma.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
-    - uses: actions/checkout@v4
+      #    - uses: actions/checkout@v4
 
     - name: Install Almalinux deps
       run: ./misc/install-alma-deps.sh
