--- a/.github/workflows/docker-alma.yml
+++ b/.github/workflows/docker-alma.yml
@@ -12,13 +12,11 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         PORTABLE: ["0", "1"]
-        CONTAINER: ["almalinux:8-minimal", "almalinux:8.9-minimal",
-                    "almalinux:9-minimal", "almalinux:9.3-minimal",
-                    "almalinux:latest"]
+        CONTAINER: ["almalinux:latest"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Install Almalinux deps
       run: ./misc/install-alma-deps.sh
