--- a/.github/workflows/docker-gentoo.yml
+++ b/.github/workflows/docker-gentoo.yml
@@ -1,4 +1,4 @@
-name: OpenWRT SDK Docker
+name: Gentoo Docker
 
 on:
   push:
@@ -12,14 +12,14 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         PORTABLE: ["0", "1"]
-        CONTAINER: ["openwrt/rootfs"]
+        CONTAINER: ["gentoo/python"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install OpenWRT SDK deps
-      run: ./misc/install-openwrt-deps.sh
+    - name: Install Gentoo deps
+      run: ./misc/install-gentoo-deps.sh
 
     - name: Build
       run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
