--- a/.github/workflows/docker-devuan.yml
+++ b/.github/workflows/docker-devuan.yml
@@ -1,4 +1,4 @@
-name: Gentoo Docker
+name: devuan Docker
 
 on:
   push:
@@ -12,25 +12,25 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         PORTABLE: ["0", "1"]
-        CONTAINER: ["gentoo/python"]
+        CONTAINER: ["devuan:latest"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install Gentoo deps
-      run: ./misc/install-gentoo-deps.sh
+    - name: Install devuan deps
+      run: ./misc/install-devuan-deps.sh
 
     - name: Build
       run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
     - name: Test install
       run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make install
 
-    - name: Build examples
-      run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make examples
-
     - name: Register libraries
       run: sudo ldconfig /usr/local/lib
+
+    - name: Build examples
+      run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make examples
 
     - name: Run examples
       run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make examples-run
