--- a/.github/workflows/docker-devuan.yml
+++ b/.github/workflows/docker-devuan.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         PORTABLE: ["0", "1"]
-        CONTAINER: ["devuan:latest"]
+        CONTAINER: ["devuan/devuan:latest"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
