--- a/.github/workflows/docker-clearlinux.yml
+++ b/.github/workflows/docker-clearlinux.yml
@@ -18,7 +18,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install Clear Linuxlinux deps
+    - name: Gather Clear Linux version info
+      run: swupd info
+
+    - name: Install Clear Linux deps
       run: ./misc/install-clearlinux-deps.sh
 
     - name: Build
