try amazon and opensuse linux

--- a/.github/workflows/docker-opensuse-tumbleweed.yml
+++ b/.github/workflows/docker-opensuse-tumbleweed.yml
@@ -1,4 +1,4 @@
-name: Amazon Linux Docker
+name: openSUSE Tumbleweed Docker
 
 on:
   push:
@@ -12,14 +12,14 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         PORTABLE: ["0", "1"]
-        CONTAINER: ["amazonlinux:latest"]
+        CONTAINER: ["opensuse/tumbleweed"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install Amazon Linux deps
-      run: ./misc/install-amazonlinux-deps.sh
+    - name: Install openSUSE Tumbleweed deps
+      run: ./misc/install-opensuse-tumbleweed-deps.sh
 
     - name: Build
       run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
