--- a/.github/workflows/docker-amazonlinux.yml
+++ b/.github/workflows/docker-amazonlinux.yml
@@ -12,18 +12,21 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         PORTABLE: ["0", "1"]
-        CONTAINER: ["amazonlinux:2"]
+        CONTAINER: ["amazonlinux:2", "amazonlinux:latest"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
 
     - name: Install Amazon Linux pre-deps
-      run: yum install -y sudo tar gzip git
+      run: yum install -y sudo tar gzip git > /dev/null 2>&1;
 
     - uses: actions/checkout@v3
 
     - name: Install Amazon Linux deps
       run: ./misc/install-amazonlinux-deps.sh
+
+    - name: Gather compiler info
+      run: gcc -v && clang -v
 
     - name: Build
       run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
