--- a/.github/workflows/docker-arch.yml
+++ b/.github/workflows/docker-arch.yml
@@ -1,4 +1,4 @@
-name: Rocky Docker
+name: Archlinux
 
 on:
   push:
@@ -12,25 +12,25 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         PORTABLE: ["0", "1"]
-        CONTAINER: ["rockylinux:9", "rockylinux:9.3"]
+        CONTAINER: ["archlinux:latest"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install Rockylinux deps
-      run: ./misc/install-rocky-deps.sh
+    - name: Install Arch deps
+      run: ./misc/install-arch-deps.sh
 
     - name: Build
       run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
     - name: Test install
       run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make install
 
-    - name: Register libraries
-      run: sudo ldconfig /usr/local/lib
-
     - name: Build examples
       run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make examples
+
+    - name: Register libraries
+      run: sudo ldconfig /usr/local/lib
 
     - name: Run examples
       run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make examples-run
