--- a/.github/workflows/docker-clearlinux.yml
+++ b/.github/workflows/docker-clearlinux.yml
@@ -1,4 +1,4 @@
-name: Oracle Linux Docker
+name: Clear Linux
 
 on:
   push:
@@ -12,14 +12,17 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         PORTABLE: ["0", "1"]
-        CONTAINER: ["oraclelinux:9"]
+        CONTAINER: ["clearlinux:latest"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install Oracle Linux deps
-      run: ./misc/install-oraclelinux-deps.sh
+    - name: Gather Clear Linux version info
+      run: swupd info
+
+    - name: Install Clear Linux deps
+      run: ./misc/install-clearlinux-deps.sh
 
     - name: Build
       run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
