--- a/.github/workflows/docker-debian.yml
+++ b/.github/workflows/docker-debian.yml
@@ -1,4 +1,4 @@
-name: Alpine Docker
+name: Debian
 
 on:
   push:
@@ -12,20 +12,22 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         PORTABLE: ["0", "1"]
-        CONTAINER: ["alpine:3.19.1", "alpine:3.19", "alpine:3.18.6",
-                    "alpine:3.18", "alpine:3.17.7", "alpine:3.17"]
+        CONTAINER: ["debian:12-slim", "debian:testing-slim", "debian:unstable-slim"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install alpine deps
-      run: ./misc/install-alpine-deps.sh
+    - name: Install Debian deps
+      run: ./misc/install-debian-deps.sh
 
     - name: Build
       run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
     - name: Test install
       run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make install
+
+    - name: Register libraries
+      run: sudo ldconfig /usr/local/lib
 
     - name: Build examples
       run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make examples
