--- a/.github/workflows/docker-ubuntu.yml
+++ b/.github/workflows/docker-ubuntu.yml
@@ -1,4 +1,4 @@
-name: Clear Linux Docker
+name: Ubuntu
 
 on:
   push:
@@ -12,17 +12,14 @@ jobs:
       matrix:
         CC: ["clang", "gcc"]
         PORTABLE: ["0", "1"]
-        CONTAINER: ["clearlinux:latest"]
+        CONTAINER: ["ubuntu:22.04", "ubuntu:23.10", "ubuntu:24.04"]
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
     - uses: actions/checkout@v4
 
-    - name: Gather Clear Linux version info
-      run: swupd info
-
-    - name: Install Clear Linux deps
-      run: ./misc/install-clearlinux-deps.sh
+    - name: Install Ubuntu deps
+      run: ./misc/install-debian-deps.sh
 
     - name: Build
       run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
