--- a/.github/workflows/ubuntu-golang-cross-compile-test.yml
+++ b/.github/workflows/ubuntu-golang-cross-compile-test.yml
@@ -13,6 +13,7 @@ jobs:
         CC: ["clang"]
         ARCH: ["amd64", "arm32v5", "arm32v6", "arm32v7", "i386", "arm64", "mips64", "mips64le", "mips", "mipsle", "ppc64", "ppc64le", "riscv64", "s390x"]
         go-version: [ '1.19', '1.20', '1.21.x' ]
+      fail-fast: false
     steps:
     - uses: actions/checkout@v4
     - name: Setup Go ${{ matrix.go-version }}
