--- a/src/Makefile.packages
+++ b/src/Makefile.packages
@@ -73,6 +73,18 @@ ${WHEEL_NAME}:
 test:
 	python3 setup.py test
 
+test-python:
+	mkdir -p build/src
+	mkdir -p dist/tmp
+	python3 -m build
+	pip install --break-system-packages --force-reinstall dist/highctidh-*.whl
+	python3 -c 'from highctidh import bench; bench.simple_bench()'
+	python3 -m pytest -v -n auto --doctest-modules -k 511
+	python3 -m pytest -v -n auto --doctest-modules -k 512
+	python3 -m pytest -v -n auto --doctest-modules -k 1024
+	python3 -m pytest -v -n auto --doctest-modules -k 2048
+
+
 sdist: ${SDIST_GZ}
 ${SDIST_GZ}:
 	-mkdir -p dist/source
