--- a/.github/workflows/macos-fiat-test.yml
+++ b/.github/workflows/macos-fiat-test.yml
@@ -11,6 +11,7 @@ jobs:
       matrix:
         OS: ["macos-11", "macos-12", "macos-13", "macos-14"]
         CC: ["clang"]
+      fail-fast: false
     runs-on: ${{ matrix.OS }}
     steps:
     - uses: actions/checkout@v4
