--- a/.github/workflows/windows-python-test.yml
+++ b/.github/workflows/windows-python-test.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Gather runtime environment
       shell: bash
       run: |
-       version
+       ver
        python -V 
        bash --version
 
