--- a/.github/workflows/windows-golang-clang-test.yml
+++ b/.github/workflows/windows-golang-clang-test.yml
@@ -8,6 +8,7 @@ jobs:
     strategy:
       matrix:
         OS: ["windows-2019", "windows-2022"]
+        CC: ["clang"]
         go-version: [ "1.19", "1.20", "1.21.x" ]
 
     steps:
@@ -26,6 +27,7 @@ jobs:
         shell: bash
         run: |
           export HIGHCTIDH_PORTABLE=1
+          export CC=${{ matrix.CC }}
           export CGO_ENABLED=1
           go get -v ./src/ctidh511
 
@@ -33,6 +35,7 @@ jobs:
         shell: bash
         run: |
           export HIGHCTIDH_PORTABLE=1
+          export CC=${{ matrix.CC }}
           export CGO_ENABLED=1
           go build -v ./...
 
@@ -40,6 +43,7 @@ jobs:
         shell: bash
         run: |
           export HIGHCTIDH_PORTABLE=1
+          export CC=${{ matrix.CC }}
           export CGO_ENABLED=1
           go test -v ./src/ctidh511;
           go test -v ./src/ctidh512;
