--- a/.github/workflows/macos-golang-clang-test.yml
+++ b/.github/workflows/macos-golang-clang-test.yml
@@ -1,4 +1,4 @@
-name: Windows Golang clang build and test
+name: MacOS Golang clang build and test
 
 on: [push]
 
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.OS }}
     strategy:
       matrix:
-        OS: ["windows-2019", "windows-2022"]
+        OS: ["macos-latest"]
         CC: ["clang"]
         go-version: [ "1.19", "1.20", "1.21.x" ]
 
