--- a/.github/workflows/windows-golang-clang-test.yml
+++ b/.github/workflows/windows-golang-clang-test.yml
@@ -29,6 +29,7 @@ jobs:
           export HIGHCTIDH_PORTABLE=1
           export CC=${{ matrix.CC }}
           export CGO_ENABLED=1
+          export CGO_LDFLAGS="-ladvapi32"
           go get -v ./src/ctidh511
 
       - name: Build golang
@@ -37,6 +38,7 @@ jobs:
           export HIGHCTIDH_PORTABLE=1
           export CC=${{ matrix.CC }}
           export CGO_ENABLED=1
+          export CGO_LDFLAGS="-ladvapi32"
           go build -v ./...
 
       - name: Golang test
@@ -45,6 +47,7 @@ jobs:
           export HIGHCTIDH_PORTABLE=1
           export CC=${{ matrix.CC }}
           export CGO_ENABLED=1
+          export CGO_LDFLAGS="-ladvapi32"
           go test -v ./src/ctidh511;
           go test -v ./src/ctidh512;
           go test -v ./src/ctidh1024;
