--- a/.github/workflows/macos-golang-clang-test.yml
+++ b/.github/workflows/macos-golang-clang-test.yml
@@ -8,7 +8,8 @@ jobs:
     strategy:
       matrix:
         OS: ["macos-latest"]
-        go-version: [ "1.19", "1.20", "1.21.x" ]
+        go-version: [ "1.19", "1.20", "1.21.x", "1.22.0"]
+      fail-fast: false
 
     steps:
       - uses: actions/checkout@v4
