--- a/.github/workflows/windows-golang-clang-test.yml
+++ b/.github/workflows/windows-golang-clang-test.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         OS: ["windows-2019", "windows-2022"]
         CC: ["clang"]
-        go-version: [ "1.20", "1.21.x" "1.22.x"]
+        go-version: [ "1.20", "1.21.x", "1.22.x"]
       fail-fast: false
 
     steps:
