--- a/.github/macos-golang-test.yml
+++ b/.github/macos-golang-test.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.OS }}
     strategy:
       matrix:
-        OS: ["macos-latest"]
+        OS: ["macos-14"]
         go-version: [ "1.19", "1.20", "1.21.x", "1.22.0"]
       fail-fast: false
 
