--- a/.github/workflows/windows-golang-test.yml
+++ b/.github/workflows/windows-golang-test.yml
@@ -42,6 +42,7 @@ jobs:
         run: |
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
+          export CGO_LDFLAGS="-DCGONUTS -ladvapi32.lib"
           go test -v ./src/ctidh511;
           go test -v ./src/ctidh512;
           go test -v ./src/ctidh1024;
