--- a/.github/workflows/windows-golang-test.yml
+++ b/.github/workflows/windows-golang-test.yml
@@ -29,12 +29,16 @@ jobs:
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
           go get -v ./src/ctidh511
+          go get -v ./src/ctidh512
+          go get -v ./src/ctidh1024
+          go get -v ./src/ctidh2048
 
       - name: Build golang
         shell: bash
         run: |
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
+          export CGO_LDFLAGS="-DCGONUTS -ldflags=-linkmode=internal"
           go build -v ./...
 
       - name: Golang test
@@ -42,7 +46,7 @@ jobs:
         run: |
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
-          export CGO_LDFLAGS="-DCGONUTS -ladvapi32.lib"
+          export CGO_LDFLAGS="-DCGONUTS -ldflags=-linkmode=internal"
           go test -v ./src/ctidh511;
           go test -v ./src/ctidh512;
           go test -v ./src/ctidh1024;
