--- a/.github/workflows/windows-golang-test.yml
+++ b/.github/workflows/windows-golang-test.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
-          export CGO_LDFLAGS="-DCGONUTS -ldflags=-linkmode=internal"
+          export CGO_LDFLAGS="-DCGONUTS -linkmode=internal"
           go build -v ./...
 
       - name: Golang test
@@ -46,7 +46,7 @@ jobs:
         run: |
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
-          export CGO_LDFLAGS="-DCGONUTS -ldflags=-linkmode=internal"
+          export CGO_LDFLAGS="-DCGONUTS -linkmode=internal"
           go test -v ./src/ctidh511;
           go test -v ./src/ctidh512;
           go test -v ./src/ctidh1024;
