--- a/.github/workflows/windows-golang-test.yml
+++ b/.github/workflows/windows-golang-test.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
+          export CGO_LDFLAGS="-DCGONUTS"
           go get -v ./src/ctidh511
           go get -v ./src/ctidh512
           go get -v ./src/ctidh1024
@@ -38,17 +39,17 @@ jobs:
         run: |
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
-          export CGO_LDFLAGS="-DCGONUTS -linkmode=internal"
-          go build -v ./...
+          export CGO_LDFLAGS="-DCGONUTS -D__Windows__"
+          go build -ldflags=-linkmode=internal -v ./...
 
       - name: Golang test
         shell: bash
         run: |
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
-          export CGO_LDFLAGS="-DCGONUTS -linkmode=internal"
-          go test -v ./src/ctidh511;
-          go test -v ./src/ctidh512;
-          go test -v ./src/ctidh1024;
-          go test -v ./src/ctidh2048;
+          export CGO_LDFLAGS="-DCGONUTS -D__Windows__"
+          go test -ldflags=-linkmode=internal -v ./src/ctidh511;
+          go test -ldflags=-linkmode=internal -v ./src/ctidh512;
+          go test -ldflags=-linkmode=internal -v ./src/ctidh1024;
+          go test -ldflags=-linkmode=internal -v ./src/ctidh2048;
 
