--- a/.github/workflows/windows-golang-test.yml
+++ b/.github/workflows/windows-golang-test.yml
@@ -7,8 +7,9 @@ jobs:
     runs-on: ${{ matrix.OS }}
     strategy:
       matrix:
-        OS: ["windows-2019", "windows-2022"]
-        go-version: [ "1.19", "1.20", "1.21.x", "1.22.x"]
+        #OS: ["windows-2019", "windows-2022"]
+        OS: ["windows-2022"]
+        go-version: ["1.22.x"]
       fail-fast: false
 
     steps:
@@ -40,7 +41,7 @@ jobs:
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
           export CGO_LDFLAGS="-DCGONUTS -D__Windows__"
-          go build -ldflags=-linkmode=internal -v ./...
+          go build -ldflags=-extldflags=-Wl,-ld_classic -v ./...
 
       - name: Golang test
         shell: bash
@@ -48,8 +49,8 @@ jobs:
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
           export CGO_LDFLAGS="-DCGONUTS -D__Windows__"
-          go test -ldflags=-linkmode=internal -v ./src/ctidh511;
-          go test -ldflags=-linkmode=internal -v ./src/ctidh512;
-          go test -ldflags=-linkmode=internal -v ./src/ctidh1024;
-          go test -ldflags=-linkmode=internal -v ./src/ctidh2048;
+          go test -ldflags=-extldflags=-Wl,-ld_classic -v ./src/ctidh511;
+          go test -ldflags=-extldflags=-Wl,-ld_classic -v ./src/ctidh512;
+          go test -ldflags=-extldflags=-Wl,-ld_classic -v ./src/ctidh1024;
+          go test -ldflags=-extldflags=-Wl,-ld_classic -v ./src/ctidh2048;
 
