--- a/.github/workflows/windows-golang-test.yml
+++ b/.github/workflows/windows-golang-test.yml
@@ -40,17 +40,14 @@ jobs:
         run: |
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
-          export CGO_LDFLAGS="-DCGONUTS -D__Windows__"
-          go build -ldflags=-extldflags=-Wl,-ld_classic -v ./...
+          export CGO_CFLAGS="-DHIGHCTIDH_PORTABLE=1 -DCGONUTS -D__Windows__"
+          go build -v ./...
 
       - name: Golang test
         shell: bash
         run: |
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
-          export CGO_LDFLAGS="-DCGONUTS -D__Windows__"
-          go test -ldflags=-extldflags=-Wl,-ld_classic -v ./src/ctidh511;
-          go test -ldflags=-extldflags=-Wl,-ld_classic -v ./src/ctidh512;
-          go test -ldflags=-extldflags=-Wl,-ld_classic -v ./src/ctidh1024;
-          go test -ldflags=-extldflags=-Wl,-ld_classic -v ./src/ctidh2048;
+          export CGO_CFLAGS="-DHIGHCTIDH_PORTABLE=1 -DCGONUTS -D__Windows__"
+          go test -v ./...
 
